--- a/Scoreboard/index.html
+++ b/Scoreboard/index.html
@@ -8,14 +8,14 @@
     <body>
         <div class="container">
             <div class="score_card">
-                <h3>HEALTH</h3>
+                <h3>Player 1 </h3>
                 <span id="score1-el">0</span>
                 <button class="button_style" onclick="add1Health()">+1</button>
                 <button class="button_style" onclick="add2Health()">+2</button>
                 <button class="button_style" onclick="add3Health()">+3</button>
             </div>
             <div class="score_card">
-                <h3>MANA</h3>
+                <h3>Player 2</h3>
                 <span id="score2-el">0</span>
                 <button class="button_style" onclick="add1Mana()">+1</button>
                 <button class="button_style" onclick="add2Mana()">+2</button>
